Validaciones - Practica Individual ObtenerDiploma